@@ -5,7 +5,8 @@ Fixes
 -----
 
 - Viewer : Fixed X-Ray shading mode on MacOS (#3473).
-- Caching : Fixed bug in caches used across gaffer that could cause compute failures (#3469).
+- Caching : Changed the cache used in various sub-systems to avoid potential compute failures (#3476).
+- LRUCache : Fixed handling of cases where value computation for a cache-miss was cancelled in-flight, which then prevented the value ever being successfully retrieved (#3469).
 
 0.54.2.2 (relative to 0.54.2.1)
 ========
